# mowbot-gui

./: .dockerignore  .gitignore  README.md  notes  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yaml
assets/: esri_map.html  leaflet_map.html  map_leaflet_raster.html
config/: config_default.yaml
docker/: Dockerfile  build.sh
src/: main.py
src/core/: __init__.py  app_state.py  docker_controller.py  mission_builder.py  sensor_diagnostics.py  vda_bridge.py  vda_controller.py
src/ui/: __init__.py  main_window.py  theme.py
src/ui/components/: __init__.py  left_hud.py  map_view.py  right_sidebar.py  top_bar.py
src/utils/: __init__.py  config.py  coverage.py  geometry.py  logger.py
tests/: conftest.py  test_coverage.py  test_docker_controller.py  test_poly_waypoint_orientation.py  test_sensor_diagnostics.py  test_teach_simplify.py
tmp/: asdas
tmp/test_compose/: docker-compose-test-dummy.yml
