[project]
name = "mowbot-gui"
version = "0.1.0"
description = "Mowbot autonomous mowing robot — control GUI"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "paho-mqtt>=1.6",
    "PyYAML>=6.0",
    "termcolor>=2.0",
    "docker>=7.0",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
